# photobooth

./: .coverage  .gitignore  LICENSE  README.md  docker-compose-pi.yaml  docker-compose.yaml  hello-world.py  mypy.ini  noxfile.py  pylintrc  pyproject.toml  pytest-report.xml  requirements.txt  setup_v4l2loopback.sh
config/: .settings.yaml  settings.yaml
docker/: Dockerfile  Dockerfile-libcam  Dockerfile-pi  Dockerfile-raspbian  Dockerfile.camera
scripts/: start_chromium.sh
src/: cup_test.py
src/backend/functions/: arrange_images.py  get_layout.py  make_qr_code.py  printout.py  upload_image.py
src/frontend/: flask_app.py  flask_test.py
src/frontend/routes/: route_config.py  route_gst_pipes.py  route_preview.py  route_print.py  route_qr_code.py  route_result.py  route_select.py  route_setup_wifi.py
src/frontend/static/: autoRedirect.js  styles.css
src/frontend/static/js/: main.js
src/frontend/templates/: config.html  error.html  error_print.html  index.html  preview.html  printing.html  qr_code.html  result.html  select.html  setup_wifi.html
src/functions/: arrange_images.py  get_layout.py  make_image.py  make_qr_code.py  printout.py  read_qr_code.py  settings.py  setup_wifi.py  upload_image.py
tests/integration/: int_arrange_images.py
tests/unit/backend/functions/: test_arrange_images.py  test_make_qr_code.py  test_printout.py  test_upload_image.py
